app/assets/stylesheets/elements/_input.scss
.input-row {
  margin-bottom: rem(10px);

  &:last-child {
    margin-bottom: 0;
  }
}

.input-single {
  display: inline-block;
  vertical-align: top;

  @include mobile {
    display: block;
  }
}

.input__classic {
  width: 220px;
  height: 40px;
  border: none;
  background: #F8F8F8;
  font-size: rem(14px);
  color: #8D8D8D;
  padding-left: rem(10px);
  font-family: inherit;

  @include mobile {
    width: 100%;
    background: $white;
  }

  &:first-child {
    margin-right: rem(32px);

    @include mobile {
      margin-right: 0;
      margin-bottom: rem(10px);
    }
  }

  @include placeholder {
    font-family: 'Roboto';
    font-style: italic;
    color: #8D8D8D;
  }
}

.input__payment {
  background: $white;
  border: 1px solid #F6F6F6;
  color: #BBBBBB;

  &:first-child {
    margin-right: rem(16px);
  }

  &--small {
    width: 120px;
  }

  &--big {
    width: 310px;

    @include mobile {
      width: 100%;
    }
  }

  @include placeholder {
    font-style: normal;
    color: #BBBBBB;
  }
}

input[name="user[phone_number]"] {
  @include mobile {
    margin-bottom: 0!important;
  }
}

input[name="user[password]"] {
  @include mobile {
    margin-bottom: rem(10px);
  }
}

